[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/bulletPoison-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Scenes/StatsWeapon.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/PoisonBullet.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=3]
radius = 7.0

[sub_resource type="Animation" id=1]
resource_name = "Play"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1 ]
}

[sub_resource type="CircleShape2D" id=4]
radius = 7.0

[node name="PoisonBullet" type="Node2D"]
script = ExtResource( 4 )

[node name="StatsWeapon" parent="." instance=ExtResource( 3 )]
typeWeapon = "PoisonBullet"
damage = 0
duration = 4
effectType = 8.0

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 3
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Play = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_mask = 16

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 4 )

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]

[editable path="Hitbox"]
